@@ -2,6 +2,7 @@
 
     * Also install qcad-data when install qcad.
     * Update url of sweethome
+    * User can disable confirm dialog which appears before installing
 
 2010-07-10 CHEN Yangyang <skabyy@gmail.com>
 
